# charsheet

./: #class.pl#  .gitignore  Barton.html  Makefile  Mr Dragon.html  Omaric.html  README  Tristan Harpell.html  Yappa.html  Zahar.html  abi.pl  ability.pl  ac.pl  backendconnection.js  background.pl  bonus.pl  charsheet.css  charsheet.pl  charwarlock.pl  class.pl  classes.pl  deploy.sh  dice.pl  display.pl  elm-build.sh  feat.pl  feats.pl  fishy.pl  format.pl  generic_fighter.pl  hp.pl  html.pl  index.html  items.pl  junk.pl  leveling.pl  mockup.html  mr fighter.html  mrdragon.pl  new_spell_auto_data.pl  (+30 more)
server/: CHANGELOG.md  README.md  charsheet-server.cabal  client_session_key.aes  new_storage.pl  package-lock.json  server.cabal  server.pl  storage.pl  test.py
server/.stack-work/: stack.sqlite3
server/characters/: Alexander Sunstone.pl  Baba Anoesh.pl  Barton.pl  Mr Warlock.pl  Tristan Harpell.pl  Waits-for-dawn.pl  another dragonborn.pl  draconic evoker.pl  dragonborn.pl  generic_fighter.pl  monk 5 fighter 11.pl  monk 5.pl  wltest.pl
server/inference/: dragon_ancestry.pl  feat.pl  fighting_style.pl  main.pl  race.pl  sheet_json.pl  spell_data.pl  test.pl  trait.pl
server/inference/class/: barbarian.pl  cleric.pl  ranger.pl  warlock.pl  wizard.pl
server/inference/race/: half_orc.pl
server/inference/resources/: api_spell_list.json  readjson.pl
server/inference/test_characters/: cleric_hill_dwarf.pl
server/pages/: character_editor.pl  login.pl  select_character.pl
server/src/: Main.hs
server/static/: charsheet.js  index.html  main.js  main.pl  main.qlf
(+393 files in other folders)
