cabal-version:       2.2

name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yesod-book#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       yesod,
                       yesod-core,
                       yesod-static
  default-extensions:  TemplateHaskell,
                       OverloadedStrings,
                       QuasiQuotes,
                       TypeFamilies
  ghc-options:         -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
